--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "pnpm build",
+    "predeploy": "pnpm build --mode production",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
