--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
+    "lefthook": "^1.12.0",
     "openapi-typescript-codegen": "^0.29.0",
     "prettier": "^3.6.0",
     "tw-animate-css": "^1.3.4",
