--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@playwright/test": "^1.54.2",
     "@storybook/react-vite": "^9.0.16",
     "@types/node": "^24.0.4",
     "@types/react": "^19.1.2",
@@ -54,6 +55,7 @@
     "globals": "^16.0.0",
     "lefthook": "^1.12.0",
     "openapi-typescript-codegen": "^0.29.0",
+    "playwright": "^1.54.2",
     "prettier": "^3.6.0",
     "storybook": "^9.0.16",
     "tw-animate-css": "^1.3.4",
