--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,6 +19,8 @@ jobs:
       run: pnpm exec playwright install --with-deps
     - name: Run Playwright tests
       run: pnpm exec playwright test
+      env:
+        E2E_BASE_URL: https://shiryaevan.github.io/interview-demo-frontend
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
