--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -22,7 +22,7 @@ jobs:
         path: ~/.cache/ms-playwright
         key: ${{ runner.os }}-playwright
     - name: Install Playwright Browsers
-      run: pnpm exec playwright install --with-deps
+      run: pnpm exec playwright install
     - name: Run Playwright tests
       run: pnpm exec playwright test
       env:
